Edited process section. Fixed “projects” menu jump.

--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ a:hover {
 p { 
 	font-family: ScalaWeb, serif;
 	-webkit-font-smoothing: antialiased;
-	font-size: 16px;
-	line-height: 1.3;
+	font-size: 14px;
+	line-height: 1.6; 
 	margin: 0;
 	color: black; 
 }
@@ -106,16 +106,35 @@ p.indent {
 
 }
 
+h3 {
+	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
+	font-weight: normal; 
+	-webkit-font-smoothing: antialiased;
+	color: dimgray;
+	font-size: 15px;
+	margin: 20px 0 12px 0;
+}
+
 .title {
 	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
 	font-weight: normal; 
+	-webkit-font-smoothing: antialiased;
 	font-size: 15px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	line-height: .8;
+	line-height: 1.3;
 	color: rgb(242, 134, 39);
 	padding: 0;
-	margin: 0 0 4px 0;
+	margin: 0;
+}
+
+h3.title {
+	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
+	font-weight: normal; 
+	-webkit-font-smoothing: antialiased;
+	color: rgb(242, 134, 39);
+	font-size: 15px;
+	text-transform: none;
 }
 
 
@@ -123,7 +142,6 @@ p.indent {
 	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
 	font-size: 13px;
 	font-weight: normal;
-	text-transform: uppercase;
 	letter-spacing: 1px;
 	color: gray;
 	padding: 0;
@@ -254,6 +272,10 @@ h1.caption_title {
 	padding-bottom: 20px;
 }
 
+.lgspace {
+	padding-bottom: 40px;
+}
+
 .res-space {
 	padding-top: 40px;
 }
@@ -289,6 +311,10 @@ h2 {
  
 .active {
 	color: rgb(242, 134, 39);
+}
+
+.process_img {
+	padding-top: 9px;
 }
 
 /* menu */ 
